# megahal-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/markov-chain/: Cargo.toml
crates/markov-chain/src/: lib.rs
crates/megahal/: Cargo.toml
crates/megahal-gen/: Cargo.toml
crates/megahal-gen/src/: lib.rs
crates/megahal-keywords/: Cargo.toml
crates/megahal-keywords/src/: lib.rs
crates/megahal-tokenizer/: Cargo.toml
crates/megahal-tokenizer/src/: lib.rs
crates/megahal/src/: lib.rs
crates/megahal/tests/: integration.rs
crates/ngram-trie/: Cargo.toml
crates/ngram-trie/src/: lib.rs
crates/symbol-core/: Cargo.toml
crates/symbol-core/src/: lib.rs
crates/symbol-dict/: Cargo.toml
crates/symbol-dict/src/: lib.rs
docs/plans/: 2026-02-17-brain-persistence.md
src/: main.rs
tests/: cli.rs
