[package]
name = "megahal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MegaHAL conversational engine — a bidirectional Markov chain chatbot"

[dependencies]
symbol-core.workspace = true
ngram-trie.workspace = true
symbol-dict.workspace = true
markov-chain.workspace = true
megahal-tokenizer.workspace = true
megahal-keywords.workspace = true
megahal-gen.workspace = true
rand.workspace = true
serde.workspace = true
bincode.workspace = true
