[package]
name = "ngram-trie"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Arena-based n-gram frequency trie with sorted children and saturating counts"

[dependencies]
symbol-core.workspace = true
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
