[package]
name = "symbol-dict"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic interning dictionary mapping Symbol values to compact SymbolId identifiers"

[dependencies]
symbol-core.workspace = true
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
